import UIKit

class InitialWelcomeViewController: UIViewController {
    
    @IBOutlet weak var welcomeTitle: UILabel!
    @IBOutlet weak var newUserButton: UIButton!
    @IBOutlet weak var existingUserButton: UIButton!
    
    @IBOutlet weak var newUserButtonContainer: UIView!
    @IBOutlet weak var existingUserButtonContainer: UIView!
    
    static func instantiate() -> InitialWelcomeViewController {
        let viewController = StoryboardScene.Welcome.initialWelcomeViewController.instantiate()
...
