...
//

import UIKit

enum KeyboardButtons: Int {
    case Cancel
    case Done
}

@MainActor protocol SubscriptionFormViewDelegate: AnyObject {
    func shouldShowAlert(title: String, text: String)
    func shouldScrollToBottom()
}
...
